# DigitalSpadArraySimulator

./: .gitignore  CMakeLists.txt  QuickStartGuide.txt  README.md  example.cfg  main.cpp  silicon_optical_properties.xls  spad_array_config_example.xls
source/Core/: CMakeLists.txt  CoreMacroIncludeFolder.cmake
source/Core/algorithms/: CMakeLists.cmake
source/Core/algorithms/include/: array_algorithm.hh  array_algorithm.hpp  polygon.hh
source/Core/algorithms/src/: polygon.cc
source/Core/configurable/: CMakeLists.cmake
source/Core/configurable/include/: iconfigurable.hh  iconfigurable.hpp  iconfigurable_factory.hh  iconfigurable_factory.hpp
source/Core/configurable/src/: iconfigurable.cc
source/Core/event/: CMakeLists.cmake
source/Core/event/include/: avalanche.hh
source/Core/event/src/: avalanche.cc
source/Core/generator/: CMakeLists.cmake
source/Core/generator/include/: afterpulse_generator.hh  crosstalk_generator.hh  dark_count_generator.hh  igenerator.hh  igenerator.hpp
source/Core/generator/src/: afterpulse_generator.cc  crosstalk_generator.cc  dark_count_generator.cc
source/Core/material/: CMakeLists.cmake
source/Core/material/include/: absorption_behavior.hh  constant_absorption_coefficient.hh  isilicon.hh  isilicon_factory.hh  silicon.hh  silicon_factory.hh  silicon_optical_properties.hh
source/Core/material/src/: constant_absorption_coefficient.cc  isilicon.cc  isilicon_factory.cc  silicon.cc  silicon_factory.cc  silicon_optical_properties.cc
source/Core/particles/: CMakeLists.cmake
source/Core/particles/include/: afterpulse.hh  crosstalk.hh  dark_count.hh  particle.hh  photon.hh
source/Core/particles/src/: afterpulse.cc  crosstalk.cc  dark_count.cc  particle.cc  photon.cc
source/Core/physics/: CMakeLists.cmake
source/Core/physics/include/: constants.hh
source/Core/physics/src/: constants.cc
source/Core/sensor/: CMakeLists.cmake
source/Core/sensor/matrix/: CMakeLists.cmake
source/Core/sensor/matrix/include/: isensor_matrix.hh  isensor_matrix_factory.hh  sipm_matrix.hh  sipm_matrix_factory.hh  spad_matrix.hh  spad_matrix_factory.hh
source/Core/sensor/matrix/src/: isensor_matrix.cc  isensor_matrix_factory.cc  sipm_matrix.cc  sipm_matrix_factory.cc  spad_matrix.cc  spad_matrix_factory.cc
source/Core/sensor/pde/: CMakeLists.cmake
source/Core/sensor/pde/include/: config_pde.hh  electric_field_pde.hh  junction_pde.hh  pde_behavior.hh
source/Core/sensor/pde/src/: config_pde.cc  electric_field_pde.cc  junction_pde.cc  pde_behavior.cc
source/Core/sensor/quench/: CMakeLists.cmake
source/Core/sensor/quench/include/: iquench.hh  quench.hh  quench_factory.hh
source/Core/sensor/sensor/: CMakeLists.cmake
source/Core/sensor/state/: CMakeLists.cmake
source/Core/simulator/: CMakeLists.cmake
source/Core/simulator/include/: avalanche_simulator.hh  isimulator.hh
source/Core/simulator/src/: avalanche_simulator.cc  isimulator.cc
source/Core/utilities/: CMakeLists.cmake
source/Core/utilities/include/: coordinate.hh  differential_equation.hh  log.hh  map.hh  map.hpp  position.hh  ptr_ref.hh  random.hh  stochastic.hh  string_cast.hh  string_cast.hpp  var_type.hh  var_type.hpp  vector.hh  vector.hpp
source/Core/utilities/src/: coordinate.cc  differential_equation.cc  log.cc  position.cc  random.cc  stochastic.cc  string_cast.cc  var_type.cc
source/Files/: CMakeLists.txt  FilesMacroIncludeFolder.cmake
source/Files/base/: CMakeLists.cmake
source/Files/base/include/: config_importer.hh  event_importer.hh  simulation_exporter.hh
source/Files/base/src/: config_importer.cc  event_importer.cc  simulation_exporter.cc
source/Files/csv/: CMakeLists.cmake
source/Files/csv/include/: csv_event_importer.hh
source/Files/csv/src/: csv_event_importer.cc
source/Files/excel/: CMakeLists.cmake
source/Files/excel/include/: excel_config_importer.hh  excel_lookup_table.hh
source/Files/excel/src/: excel_config_importer.cc  excel_lookup_table.cc
source/Files/laser_beam/: CMakeLists.cmake
source/Files/laser_beam/include/: laser_event_importer.hh
source/Files/laser_beam/src/: laser_event_importer.cc
source/Files/root/: CMakeLists.cmake
source/Files/root/include/: root_event_importer.hh  root_include_lib.hh  root_simulation_exporter.hh
source/Files/root/src/: root_event_importer.cc  root_include_lib.cc  root_simulation_exporter.cc
source/contrib/ConfigFile/: CMakeLists.txt  ConfigFile.cc  ConfigFile.h
source/contrib/ExcelFormat/: BasicExcel.cpp  BasicExcel.hpp  CMakeLists.txt  ExcelFormat.cpp  ExcelFormat.h
(+37 files in other folders)
